用Inflate方式成功实现了ViewPager
用Inflate方式成功实现了ViewPager，并且可以动态的修改所加载的内容，注意加载Layout中的具体控件的方法。例如：TextView
textView = (TextView)layoutView.findViewById(R.id.tv);

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:background="#dd0"
     tools:context="com.hansq.viewpagerinflate.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:id="@+id/viewGroup"
