--- a/app/src/main/res/drawable/dot_no_select.xml
+++ b/app/src/main/res/drawable/dot_no_select.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid  android:color="#eee"/>
+    <solid  android:color="#666"/>
     <size   android:height="10dp"
         android:width="10dp"/>
 
