--- a/app/src/main/res/drawable/dot_select.xml
+++ b/app/src/main/res/drawable/dot_select.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid  android:color="#999"/>
+    <solid  android:color="#500"/>
     <size   android:height="10dp"
         android:width="10dp"/>
-    <stroke android:color="#500"
-        android:width="1dp"/>
+   <!-- <stroke android:color="#500"
+        android:width="5dp"/>-->
 
 </shape>
