--- a/app/src/main/res/layout/dot.xml
+++ b/app/src/main/res/layout/dot.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="10dp"
-    android:layout_height="10dp"
-    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/dot_select"
-    android:layout_alignParentBottom="true"
-    android:layout_marginBottom="4dp"
     android:layout_marginLeft="7dp"
     android:layout_marginRight="7dp"
     >
