--- a/app/src/main/res/layout/one.xml
+++ b/app/src/main/res/layout/one.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="200dp"
+    android:gravity="center_vertical">
 
     <TextView
+        android:id="@+id/tv"
         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="ViewPager"
+        />
+    <LinearLayout
+        android:layout_below="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center">
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="对啦"/>
+        android:gravity="center"
+        android:textAllCaps="false"
+        android:text="Button"/>
+    </LinearLayout>
 
 </RelativeLayout>
